kubernetes/myapp-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
