kubernetes/promethueus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.az.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-server
          servicePort: 80
